--- a/public/scripts/RDataWidget/templates/RDataWidget.html
+++ b/public/scripts/RDataWidget/templates/RDataWidget.html
@@ -1,4 +1,5 @@
 <div class="main">
+    <div id="messages"></div>
     <div class="controlPanel">
         <div id="selectScript"></div>
         <div class="control-button">
@@ -9,6 +10,7 @@
     </div>
     <h2 id="reportName"></h2>
     <div id="output2"></div>
+    <div id="statusBar"></div>
     <div id="simplechart"></div>
     <div id="grid"></div>
 </div>
