--- a/templates/app/login.html.twig
+++ b/templates/app/login.html.twig
@@ -1,20 +1,3 @@
-{% import '@macros/forms.html.twig' as forms %}
-{#
-<h1>Sign In</h1>
-<form method="post" action={{ path() }}>
-    <dl class="zend_form">
-
-        {% for element in loginForm %}
-            {% if element.attributes.type == "select" %}
-                {{ forms.input(element.attributes.name, element.value, element.attributes.type, element.label, 20, element.messages, element.valueOptions) }}
-            {% else %}
-                {{ forms.input(element.attributes.name, element.value, element.attributes.type, element.label, 20, element.messages, 'false') }}
-            {% endif %}
-        {% endfor %}
-
-    </dl>
-</form>
-#}
 <div>
     <h1>Sign In</h1>
     {% if error %}
@@ -24,7 +7,7 @@
         </h2>
     </div>
     {% endif %}
-    <form method="post" action={{ path() }}>
+    <form method="post" action="/auth">
         <dl class="zend_form">
             <label>
                 User name
