Изменил шаблон(верстку)

--- a/public/scripts/RDataWidget/templates/RDataWidget.html
+++ b/public/scripts/RDataWidget/templates/RDataWidget.html
@@ -1,15 +1,18 @@
 <div class="main">
-    <style data-dojo-attach-point="styleNode">${style}</style>
     <div id="messages"></div>
     <div class="controlPanel">
         <div id="selectScript"></div>
         <div class="control-button">
-            <button id="newFilter" data-dojo-attach-point="newFilterButtonNode">${newFilterButton}</button>
-            <button id="addFilter" data-dojo-attach-point="addFilterButtonNode">${addFilterButton}</button>
-            <button id="cleanFilter" data-dojo-attach-point="cleanFilterButtonNode">${cleanFilterButton}</button>
+            <button id="newFilter" ></button>
+            <button id="addFilter" ></button>
+            <button id="cleanFilter" ></button>
         </div>
     </div>
-    <div id="output2"></div>
+    <div id="alertBlock">
+        <div id="output2"></div>
+        <button id="closeAlert">&times;</button>
+    </div>
+
     <h2 id="reportName"></h2>
     <div id="simplechart"></div>
     <div id="grid"></div>
