--- a/templates/app/login.html.twig
+++ b/templates/app/login.html.twig
@@ -1,25 +1,37 @@
-<div>
-    <h1>Sign In</h1>
-    {% if error %}
-    <div>
-        <h2>
-            {{ error }}
-        </h2>
+{% extends '@layout/layout.html.twig' %}
+
+{% block access %}
+    <li><a href="{{ path('auth') }}">Login</a></li>
+{% endblock access %}
+
+{% block leftMenu %}
+{% endblock leftMenu %}
+
+{% block centerRightBlock %}
+    <div class="col-sm-4 col-sm-offset-4 col-md-4 col-md-offset-4 main">
+        <div>
+            {% if error %}
+                <div class="alert alert-danger alert-dismissable">
+                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+                    {{ error }}
+                </div>
+            {% endif %}
+            <h1>Sign In</h1>
+            <form role="form" method="post" action="/auth">
+
+                <div class="form-group">
+                    <label for="inputUserName">User name</label>
+                    <input type="text" name="login" class="form-control" title="text" id="inputUserName"
+                           placeholder="User name"/>
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword">Password</label>
+                    <input type="password" class="form-control" name="password" id="inputPassword"
+                           placeholder="Password"/>
+                </div>
+                <button type="submit" class="btn btn-primary">Отправить</button>
+
+            </form>
+        </div>
     </div>
-    {% endif %}
-    <form method="post" action="/auth">
-        <dl class="zend_form">
-            <label>
-                User name
-                <input type="text" name="login"/>
-            </label>
-            <label>
-                Password
-                <input type="password" name="password"/>
-            </label>
-            <label>
-                <input type="submit" name="submit"/>
-            </label>
-        </dl>
-    </form>
-</div>
+{% endblock centerRightBlock %}
