--- a/templates/app/homepage.html.twig
+++ b/templates/app/homepage.html.twig
@@ -109,8 +109,8 @@
     <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
 
         <div id="alertBlock" class="alert alert-success alert-dismissable">
-            <div id="output2"></div>
             <button type="button" class="close" id="closeAlert" >&times;</button>
+            <div id="output2"></div>
         </div>
 
     </div>
@@ -129,7 +129,7 @@
 
  {% endblock mainSideMenu %}
 
-{% block centralBlockName %} График {% endblock centralBlockName %}
+{% block centralBlockName %}  {% endblock centralBlockName %}
 
 {% block contentHeader %}
     <div id="simplechart"></div>
