Добавлен вывод ошибок ответа к R серверу; В списоке выбора скрипта теперь выводиться имя отчета данного скрипта;

--- a/public/bootstrap/css/dashboard.css
+++ b/public/bootstrap/css/dashboard.css
@@ -141,3 +141,8 @@ body {
 .dijitSelect .dijitButtonContents {
     min-width: 50px;
 }
+
+span.dijitReset.dijitInline.dijitSelectLabel.dijitValidationTextBoxLabel{
+    max-width: 160px;
+    overflow-x: hidden;
+}
