Добавлена ссылка на Trello https://trello.com/c/2d6NOeTw/4-trello

--- a/templates/layout/layout.html.twig
+++ b/templates/layout/layout.html.twig
@@ -43,6 +43,7 @@
                {# <li><a href="#">Help</a></li>#}
                 <li><a href="{{ path('rreport') }}">Отчеты </a></li>
                 <li><a href="{{ path('notification.view') }}"> Уведомления Ebay </a></li>
+                <li><a href="https://trello.com/b/TkPCVE3j/analytic-repots-web"> Trello </a></li>
                 {% block access %}
                     <li><a href="{{ path('logout') }}">Logout</a></li>
                 {% endblock access %}
