--- a/templates/ebay/notification.html.twig
+++ b/templates/ebay/notification.html.twig
@@ -107,39 +107,10 @@
                      ColumnHider,
                      ColumnResizer) {
 
-            var tempFilteredGrid = new TableControlPanelFactory('notification');
+            var tempFilteredGrid = new TableControlPanelFactory('typeNotification');
             tempFilteredGrid.startup();
             dom.byId("temp-grid").appendChild(tempFilteredGrid.domNode);
 
-            /* var store = new Memory({
-             data: [
-             {id: "1", name:"1Name11" },
-             {id: "2", name:"1Name12" },
-             {id: "3", name:"1Name13" },
-             {id: "4", name:"1Name14" }
-             ]
-             });
-             var testgrid = new (declare([Grid, Pagination, ColumnHider, ColumnResizer]))({
-             "columns": [
-             {"label": "id", "field": "id"},
-             {"label": "Дата создания", "field": "name"},
-             ],
-             collections: store,
-             "selectionMode": "single",
-             "pagingLinks": false,
-             "pagingTextBox": true,
-             "firstLastArrows": true,
-             "rowsPerPage": 15,
-             "pageSizeOptions": [10, 15, 25]
-             }, "temp-grid2");
-
-             testgrid.startup();*/
-
-            /*on(dom.byId("temp-grid2"), "click", function () {
-             var columns = tempFilteredGrid.table.getConfig();
-             columns['1'].hidden = true;
-             tempFilteredGrid.table.setColumns(columns);
-             })*/
         });
     </script>
 {% endblock javascripts %}
