Добавлена система автоматической конфигураций таблиц. Изменена страцица уведовлений Ebay Исправлен баг - настройки таблиц были не доступны на странице ebay notification Добавлена возможность задавать количество товаров для отчета "Таблица количества выставлений на каждый час недели" На страцине отчетов, таблица теперь завернута в titlePane При изменении ноды фильтра, подружает ее текущие значения

--- a/templates/app/homepage.html.twig
+++ b/templates/app/homepage.html.twig
@@ -38,6 +38,7 @@
             'dojo/json',
             "Rscript/scriptListConfigNew",
             "Rscript/RDataWidget/RDataWidget",
+            "Rscript/Smart/TableControlPanel/TableControlPanelFactory",
             'dstore/RequestMemory',
             "dstore/Rest",
             'dstore/Trackable',
@@ -53,6 +54,7 @@
                      json,
                      scriptListConfig,
                      RDataWidget,
+                     TableControlPanelFactory,
                      RequestMemory,
                      Rest,
                      Trackable,
@@ -130,7 +132,6 @@
                 scriptList: scriptsList
 
             }).placeAt(document.body);
-
         });
     </script>
 {% endblock javascripts %}
@@ -150,11 +151,11 @@
 
  {% block mainSideMenu %}
 
-     <li><a id="newFilter" href="#">Новый фильтр</a></li>
+     <li id="menuContainer"></li>
 
-     <li><a id="addFilter" href="#">Добавить фильр</a></li>
+     {#<li><a id="addFilter" href="#">Добавить фильр</a></li>
 
-     <li><a id="cleanFilter" href="#">Удалить фильтр</a></li>
+     <li><a id="cleanFilter" href="#">Удалить фильтр</a></li>#}
 
      <li id="selectScript"></li>
 
