--- a/public/bootstrap/css/dashboard.css
+++ b/public/bootstrap/css/dashboard.css
@@ -31,7 +31,7 @@ body {
         top: 51px;
         bottom: 0;
         left: 0;
-        z-index: 1000;
+        z-index: 100;
         display: block;
         padding: 20px;
         overflow-x: hidden;
@@ -184,4 +184,13 @@ span.dijitReset.dijitInline.dijitSelectLabel.dijitValidationTextBoxLabel {
 .filter_active {
     width: 100%;
     height: 34px;
+}
+
+.dgrid-row-table {
+    height: 22px;
+}
+
+.dgrid-cell {
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
